Update lists at 20240313-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -113,6 +114,7 @@ allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
+allow 130.193.10.21;
 allow 130.193.15.186;
 allow 135.125.205.25;
 allow 136.244.111.163;
@@ -187,6 +189,7 @@ allow 171.25.193.234;
 allow 171.25.193.235;
 allow 171.25.193.25;
 allow 171.25.193.77;
+allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
 allow 172.104.214.41;
@@ -237,6 +240,7 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.211.30.149;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -338,7 +342,6 @@ allow 185.220.101.104;
 allow 185.220.101.105;
 allow 185.220.101.106;
 allow 185.220.101.107;
-allow 185.220.101.108;
 allow 185.220.101.109;
 allow 185.220.101.11;
 allow 185.220.101.110;
@@ -459,6 +462,7 @@ allow 185.220.101.57;
 allow 185.220.101.58;
 allow 185.220.101.59;
 allow 185.220.101.6;
+allow 185.220.101.60;
 allow 185.220.101.61;
 allow 185.220.101.62;
 allow 185.220.101.63;
@@ -728,7 +732,6 @@ allow 2001:41d0:701:1100::4434;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
-allow 2001:41d0:801:2000::2b97;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -746,6 +749,7 @@ allow 2001:67c:289c:2::234;
 allow 2001:67c:289c:2::235;
 allow 2001:67c:289c::25;
 allow 2001:67c:289c:4::77;
+allow 2001:67c:289c:4::78;
 allow 2001:67c:289c:4::79;
 allow 2001:67c:289c:4::80;
 allow 2001:67c:6ec:203:192:42:116:173;
@@ -1141,7 +1145,6 @@ allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:110:2990::;
 allow 2a00:1169:112:de0::;
-allow 2a00:1169:117:5510::;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
@@ -1176,7 +1179,6 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
-allow 2a02:c206:2161:161::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:c207:3006:6498::1;
 allow 2a02:ec0:209:10::4;
@@ -1427,6 +1429,7 @@ allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
+allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
@@ -1472,7 +1475,6 @@ allow 2a0b:f4c2:4::104;
 allow 2a0b:f4c2:4::105;
 allow 2a0b:f4c2:4::106;
 allow 2a0b:f4c2:4::107;
-allow 2a0b:f4c2:4::108;
 allow 2a0b:f4c2:4::109;
 allow 2a0b:f4c2:4::110;
 allow 2a0b:f4c2:4::96;
@@ -1638,7 +1640,6 @@ allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
 allow 5.182.86.212;
-allow 51.89.138.51;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
@@ -1670,7 +1671,6 @@ allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
-allow 54.237.171.68;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1687,6 +1687,7 @@ allow 62.182.84.146;
 allow 64.227.115.78;
 allow 64.5.123.66;
 allow 65.109.30.253;
+allow 65.38.121.14;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 67.219.109.141;
@@ -1694,6 +1695,7 @@ allow 70.53.133.193;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
+allow 72.5.42.31;
 allow 74.207.248.172;
 allow 74.208.106.128;
 allow 74.82.47.194;
@@ -1737,8 +1739,6 @@ allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
-allow 84.247.165.52;
-allow 84.247.165.53;
 allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
@@ -1798,7 +1798,6 @@ allow 91.92.109.43;
 allow 92.205.129.119;
 allow 92.205.163.226;
 allow 92.205.185.52;
-allow 92.205.237.227;
 allow 92.205.31.137;
 allow 92.243.24.163;
 allow 92.246.84.133;
@@ -1839,7 +1838,6 @@ allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
 allow 94.75.225.81;
-allow 95.111.238.0;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
@@ -1853,5 +1851,4 @@ allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
 allow 96.27.198.133;
-allow 96.42.26.63;
 allow 96.66.15.152;
