--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -113,6 +114,7 @@ set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
+set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
@@ -187,6 +189,7 @@ set_real_ip_from 171.25.193.234;
 set_real_ip_from 171.25.193.235;
 set_real_ip_from 171.25.193.25;
 set_real_ip_from 171.25.193.77;
+set_real_ip_from 171.25.193.78;
 set_real_ip_from 171.25.193.79;
 set_real_ip_from 171.25.193.80;
 set_real_ip_from 172.104.214.41;
@@ -237,6 +240,7 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.211.30.149;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.163;
 set_real_ip_from 185.100.85.132;
@@ -338,7 +342,6 @@ set_real_ip_from 185.220.101.104;
 set_real_ip_from 185.220.101.105;
 set_real_ip_from 185.220.101.106;
 set_real_ip_from 185.220.101.107;
-set_real_ip_from 185.220.101.108;
 set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.11;
 set_real_ip_from 185.220.101.110;
@@ -459,6 +462,7 @@ set_real_ip_from 185.220.101.57;
 set_real_ip_from 185.220.101.58;
 set_real_ip_from 185.220.101.59;
 set_real_ip_from 185.220.101.6;
+set_real_ip_from 185.220.101.60;
 set_real_ip_from 185.220.101.61;
 set_real_ip_from 185.220.101.62;
 set_real_ip_from 185.220.101.63;
@@ -728,7 +732,6 @@ set_real_ip_from 2001:41d0:701:1100::4434;
 set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
-set_real_ip_from 2001:41d0:801:2000::2b97;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
@@ -746,6 +749,7 @@ set_real_ip_from 2001:67c:289c:2::234;
 set_real_ip_from 2001:67c:289c:2::235;
 set_real_ip_from 2001:67c:289c::25;
 set_real_ip_from 2001:67c:289c:4::77;
+set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
 set_real_ip_from 2001:67c:289c:4::80;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:173;
@@ -1141,7 +1145,6 @@ set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:1169:110:2990::;
 set_real_ip_from 2a00:1169:112:de0::;
-set_real_ip_from 2a00:1169:117:5510::;
 set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:5200::;
 set_real_ip_from 2a00:1169:11f:d680::;
@@ -1176,7 +1179,6 @@ set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
-set_real_ip_from 2a02:c206:2161:161::1;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:c207:3006:6498::1;
 set_real_ip_from 2a02:ec0:209:10::4;
@@ -1427,6 +1429,7 @@ set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
 set_real_ip_from 2a0b:f4c2:2::59;
 set_real_ip_from 2a0b:f4c2::26;
+set_real_ip_from 2a0b:f4c2:2::60;
 set_real_ip_from 2a0b:f4c2:2::61;
 set_real_ip_from 2a0b:f4c2:2::62;
 set_real_ip_from 2a0b:f4c2:2::63;
@@ -1472,7 +1475,6 @@ set_real_ip_from 2a0b:f4c2:4::104;
 set_real_ip_from 2a0b:f4c2:4::105;
 set_real_ip_from 2a0b:f4c2:4::106;
 set_real_ip_from 2a0b:f4c2:4::107;
-set_real_ip_from 2a0b:f4c2:4::108;
 set_real_ip_from 2a0b:f4c2:4::109;
 set_real_ip_from 2a0b:f4c2:4::110;
 set_real_ip_from 2a0b:f4c2:4::96;
@@ -1638,7 +1640,6 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.81.254.14;
 set_real_ip_from 51.81.254.15;
 set_real_ip_from 5.182.86.212;
-set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
@@ -1670,7 +1671,6 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 54.224.79.94;
-set_real_ip_from 54.237.171.68;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
@@ -1687,6 +1687,7 @@ set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
 set_real_ip_from 65.109.30.253;
+set_real_ip_from 65.38.121.14;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 67.219.109.141;
@@ -1694,6 +1695,7 @@ set_real_ip_from 70.53.133.193;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.167.47.69;
+set_real_ip_from 72.5.42.31;
 set_real_ip_from 74.207.248.172;
 set_real_ip_from 74.208.106.128;
 set_real_ip_from 74.82.47.194;
@@ -1737,8 +1739,6 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
-set_real_ip_from 84.247.165.52;
-set_real_ip_from 84.247.165.53;
 set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
@@ -1798,7 +1798,6 @@ set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.205.129.119;
 set_real_ip_from 92.205.163.226;
 set_real_ip_from 92.205.185.52;
-set_real_ip_from 92.205.237.227;
 set_real_ip_from 92.205.31.137;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
@@ -1839,7 +1838,6 @@ set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.32.66.15;
 set_real_ip_from 94.75.225.81;
-set_real_ip_from 95.111.238.0;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
@@ -1853,5 +1851,4 @@ set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.27.198.133;
-set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
