--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -18,7 +18,6 @@ set_real_ip_from 2001:41d0:701:1100::4434;
 set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
-set_real_ip_from 2001:41d0:801:2000::2b97;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
@@ -36,6 +35,7 @@ set_real_ip_from 2001:67c:289c:2::234;
 set_real_ip_from 2001:67c:289c:2::235;
 set_real_ip_from 2001:67c:289c::25;
 set_real_ip_from 2001:67c:289c:4::77;
+set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
 set_real_ip_from 2001:67c:289c:4::80;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:173;
@@ -287,7 +287,6 @@ set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:1169:110:2990::;
 set_real_ip_from 2a00:1169:112:de0::;
-set_real_ip_from 2a00:1169:117:5510::;
 set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:5200::;
 set_real_ip_from 2a00:1169:11f:d680::;
@@ -322,7 +321,6 @@ set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
-set_real_ip_from 2a02:c206:2161:161::1;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:c207:3006:6498::1;
 set_real_ip_from 2a02:ec0:209:10::4;
@@ -573,6 +571,7 @@ set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
 set_real_ip_from 2a0b:f4c2:2::59;
 set_real_ip_from 2a0b:f4c2::26;
+set_real_ip_from 2a0b:f4c2:2::60;
 set_real_ip_from 2a0b:f4c2:2::61;
 set_real_ip_from 2a0b:f4c2:2::62;
 set_real_ip_from 2a0b:f4c2:2::63;
@@ -618,7 +617,6 @@ set_real_ip_from 2a0b:f4c2:4::104;
 set_real_ip_from 2a0b:f4c2:4::105;
 set_real_ip_from 2a0b:f4c2:4::106;
 set_real_ip_from 2a0b:f4c2:4::107;
-set_real_ip_from 2a0b:f4c2:4::108;
 set_real_ip_from 2a0b:f4c2:4::109;
 set_real_ip_from 2a0b:f4c2:4::110;
 set_real_ip_from 2a0b:f4c2:4::96;
