--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -19,7 +19,6 @@ allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:5c0::1;
-allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -617,6 +616,7 @@ allow 2a0b:f4c2:4::104;
 allow 2a0b:f4c2:4::105;
 allow 2a0b:f4c2:4::106;
 allow 2a0b:f4c2:4::107;
+allow 2a0b:f4c2:4::108;
 allow 2a0b:f4c2:4::109;
 allow 2a0b:f4c2:4::110;
 allow 2a0b:f4c2:4::96;
