--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -19,7 +19,6 @@ deny 2001:41d0:701:1100::4f60;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
 deny 2001:41d0:a:5c0::1;
-deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -617,6 +616,7 @@ deny 2a0b:f4c2:4::104;
 deny 2a0b:f4c2:4::105;
 deny 2a0b:f4c2:4::106;
 deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
 deny 2a0b:f4c2:4::109;
 deny 2a0b:f4c2:4::110;
 deny 2a0b:f4c2:4::96;
