--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -116,6 +115,7 @@ set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
+set_real_ip_from 130.193.15.79;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.124.184.117;
@@ -161,6 +161,7 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.42.137.210;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
+set_real_ip_from 156.146.63.135;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.199;
@@ -240,7 +241,6 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.211.30.149;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.163;
 set_real_ip_from 185.100.85.132;
@@ -342,6 +342,7 @@ set_real_ip_from 185.220.101.104;
 set_real_ip_from 185.220.101.105;
 set_real_ip_from 185.220.101.106;
 set_real_ip_from 185.220.101.107;
+set_real_ip_from 185.220.101.108;
 set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.11;
 set_real_ip_from 185.220.101.110;
@@ -733,7 +734,6 @@ set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
 set_real_ip_from 2001:41d0:a:5c0::1;
-set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -1475,6 +1475,7 @@ set_real_ip_from 2a0b:f4c2:4::104;
 set_real_ip_from 2a0b:f4c2:4::105;
 set_real_ip_from 2a0b:f4c2:4::106;
 set_real_ip_from 2a0b:f4c2:4::107;
+set_real_ip_from 2a0b:f4c2:4::108;
 set_real_ip_from 2a0b:f4c2:4::109;
 set_real_ip_from 2a0b:f4c2:4::110;
 set_real_ip_from 2a0b:f4c2:4::96;
@@ -1539,6 +1540,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 35.0.127.52;
+set_real_ip_from 35.169.147.172;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.120.188.156;
@@ -1617,7 +1619,6 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.166.139.111;
 set_real_ip_from 46.182.21.248;
-set_real_ip_from 46.195.78.212;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1643,9 +1644,9 @@ set_real_ip_from 5.182.86.212;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
-set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.252.224.53;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1689,6 +1690,7 @@ set_real_ip_from 64.5.123.66;
 set_real_ip_from 65.109.30.253;
 set_real_ip_from 65.38.121.14;
 set_real_ip_from 66.146.193.33;
+set_real_ip_from 66.175.223.155;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 70.53.133.193;
@@ -1850,5 +1852,6 @@ set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
+set_real_ip_from 95.211.7.148;
 set_real_ip_from 96.27.198.133;
 set_real_ip_from 96.66.15.152;
