--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -19,6 +19,7 @@ allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:5c0::1;
+allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -434,7 +435,6 @@ allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
-allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
