--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -225,6 +225,7 @@ allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
+allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f8e6:9fae:c86f:2d71:6c28;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
@@ -339,7 +340,6 @@ allow 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
-allow 2a03:4000:40:14b:d816:17ff:feae:5598;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
@@ -435,6 +435,7 @@ allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
+allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
@@ -673,6 +674,7 @@ allow 2a12:5940:c820::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
+allow 2a12:62c0::254;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
