--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -63,6 +62,7 @@ set_real_ip_from 107.189.14.4;
 set_real_ip_from 107.189.14.43;
 set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.1.96;
+set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.28.199;
 set_real_ip_from 107.189.29.103;
 set_real_ip_from 107.189.30.236;
@@ -163,7 +163,6 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 156.146.63.135;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
@@ -273,6 +272,7 @@ set_real_ip_from 185.129.61.7;
 set_real_ip_from 185.129.61.8;
 set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
+set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.44.108;
 set_real_ip_from 185.130.44.43;
 set_real_ip_from 185.130.47.58;
@@ -1082,6 +1082,7 @@ set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
+set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f8e6:9fae:c86f:2d71:6c28;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
@@ -1197,7 +1198,6 @@ set_real_ip_from 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 set_real_ip_from 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
-set_real_ip_from 2a03:4000:40:14b:d816:17ff:feae:5598;
 set_real_ip_from 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 set_real_ip_from 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
@@ -1293,6 +1293,7 @@ set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
+set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
@@ -1531,11 +1532,13 @@ set_real_ip_from 2a12:5940:c820::2;
 set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:5940:d0e2::2;
 set_real_ip_from 2a12:5940:f0a8::2;
+set_real_ip_from 2a12:62c0::254;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 3.213.67.38;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1547,7 +1550,6 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 3.93.249.240;
 set_real_ip_from 45.128.232.102;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.128.232.170;
@@ -1643,7 +1645,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 5.252.224.53;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
@@ -1791,6 +1792,7 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
+set_real_ip_from 91.217.219.254;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
