--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -659,6 +659,7 @@ deny 2a10:1fc0:1::ac76:4d41;
 deny 2a10:1fc0:1::c0a:270f;
 deny 2a10:1fc0:1::d717:cb95;
 deny 2a10:8a40:f313::29;
+deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
