--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -64,7 +63,6 @@ allow 107.189.1.9;
 allow 107.189.1.96;
 allow 107.189.2.108;
 allow 107.189.28.199;
-allow 107.189.29.103;
 allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
@@ -109,7 +107,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -127,7 +124,12 @@ allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
 allow 141.98.11.62;
+allow 141.98.168.146;
+allow 141.98.168.147;
+allow 141.98.168.148;
 allow 141.98.168.155;
+allow 141.98.168.157;
+allow 141.98.168.161;
 allow 141.98.168.162;
 allow 141.98.168.166;
 allow 141.98.168.167;
@@ -149,6 +151,9 @@ allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
 allow 146.19.143.113;
+allow 146.19.143.122;
+allow 146.19.143.52;
+allow 146.19.143.58;
 allow 146.19.143.64;
 allow 146.19.143.82;
 allow 146.59.234.220;
@@ -164,9 +169,11 @@ allow 154.16.116.61;
 allow 156.146.63.135;
 allow 160.119.249.240;
 allow 161.35.129.51;
+allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
+allow 162.247.74.202;
 allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
@@ -238,6 +245,7 @@ allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
+allow 179.43.167.194;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
@@ -633,6 +641,7 @@ allow 192.46.227.185;
 allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.109.120.160;
 allow 193.109.120.85;
 allow 193.163.170.149;
 allow 193.168.141.245;
@@ -823,7 +832,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -1514,12 +1522,16 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:1::1078:9b3b;
+allow 2a10:1fc0:1::6017:3c35;
 allow 2a10:1fc0:1::9a01:890f;
 allow 2a10:1fc0:1::ac76:4d41;
+allow 2a10:1fc0:1::b81d:9391;
 allow 2a10:1fc0:1::c0a:270f;
+allow 2a10:1fc0:1::c0c7:2c7;
 allow 2a10:1fc0:1::d717:cb95;
+allow 2a10:1fc0:1::ef6b:36d;
+allow 2a10:1fc0:1::fed5:16e7;
 allow 2a10:8a40:f313::29;
-allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1541,10 +1553,12 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.220.87.46;
 allow 31.220.98.139;
+allow 3.223.216.207;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
+allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.63;
@@ -1552,7 +1566,9 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.207.76.152;
+allow 45.120.178.198;
+allow 45.120.178.253;
+allow 45.120.178.83;
 allow 45.128.232.102;
 allow 45.128.232.151;
 allow 45.128.232.170;
@@ -1587,6 +1603,7 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.14.247.170;
+allow 45.144.29.134;
 allow 45.15.157.177;
 allow 45.15.158.165;
 allow 45.15.158.39;
@@ -1605,6 +1622,7 @@ allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.87.154.151;
 allow 45.9.148.219;
 allow 45.9.150.103;
 allow 45.9.150.130;
@@ -1649,7 +1667,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1701,6 +1718,9 @@ allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
 allow 72.5.42.31;
+allow 74.119.195.235;
+allow 74.119.195.4;
+allow 74.119.195.92;
 allow 74.207.248.172;
 allow 74.208.106.128;
 allow 74.82.47.194;
@@ -1712,6 +1732,8 @@ allow 77.232.143.255;
 allow 77.48.28.204;
 allow 77.48.28.239;
 allow 77.81.247.72;
+allow 77.91.122.149;
+allow 77.91.123.97;
 allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
@@ -1748,6 +1770,7 @@ allow 84.247.165.51;
 allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
+allow 85.17.9.83;
 allow 85.204.116.211;
 allow 85.204.116.88;
 allow 85.209.176.103;
@@ -1797,9 +1820,9 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
 allow 91.217.219.254;
-allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
+allow 91.235.234.209;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.205.129.119;
