--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -107,7 +107,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -654,12 +653,16 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:1fc0:1::1078:9b3b;
+set_real_ip_from 2a10:1fc0:1::6017:3c35;
 set_real_ip_from 2a10:1fc0:1::9a01:890f;
 set_real_ip_from 2a10:1fc0:1::ac76:4d41;
+set_real_ip_from 2a10:1fc0:1::b81d:9391;
 set_real_ip_from 2a10:1fc0:1::c0a:270f;
+set_real_ip_from 2a10:1fc0:1::c0c7:2c7;
 set_real_ip_from 2a10:1fc0:1::d717:cb95;
+set_real_ip_from 2a10:1fc0:1::ef6b:36d;
+set_real_ip_from 2a10:1fc0:1::fed5:16e7;
 set_real_ip_from 2a10:8a40:f313::29;
-set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
