--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -108,6 +108,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -272,7 +273,6 @@ allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.113.128.30;
-allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
 allow 185.129.61.2;
@@ -820,7 +820,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:89c:666::1;
-allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
@@ -831,6 +830,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -894,7 +894,6 @@ allow 23.129.64.136;
 allow 23.129.64.137;
 allow 23.129.64.138;
 allow 23.129.64.139;
-allow 23.129.64.140;
 allow 23.129.64.141;
 allow 23.129.64.142;
 allow 23.129.64.143;
@@ -1117,7 +1116,6 @@ allow 2620:18c:0:192::136;
 allow 2620:18c:0:192::137;
 allow 2620:18c:0:192::138;
 allow 2620:18c:0:192::139;
-allow 2620:18c:0:192::140;
 allow 2620:18c:0:192::141;
 allow 2620:18c:0:192::142;
 allow 2620:18c:0:192::143;
@@ -1569,7 +1567,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.207.109.65;
 allow 45.120.178.198;
 allow 45.120.178.253;
 allow 45.120.178.83;
@@ -1697,6 +1694,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.197.63.94;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1756,6 +1754,7 @@ allow 80.67.172.162;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
