--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -96,7 +96,6 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5525;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
 deny 2001:67c:89c:666::1;
-deny 2001:67c:89c:702:1ce:1ce:babe:1;
 deny 2001:67c:89c:702:1ce:1ce:babe:10;
 deny 2001:67c:89c:702:1ce:1ce:babe:2;
 deny 2001:67c:89c:702:1ce:1ce:babe:3;
@@ -107,6 +106,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -250,7 +250,6 @@ deny 2620:18c:0:192::136;
 deny 2620:18c:0:192::137;
 deny 2620:18c:0:192::138;
 deny 2620:18c:0:192::139;
-deny 2620:18c:0:192::140;
 deny 2620:18c:0:192::141;
 deny 2620:18c:0:192::142;
 deny 2620:18c:0:192::143;
