--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,7 +119,6 @@ allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.124.184.117;
 allow 138.124.184.143;
-allow 138.124.184.217;
 allow 138.124.184.244;
 allow 138.128.222.68;
 allow 138.59.18.110;
@@ -189,7 +188,6 @@ allow 162.81.29.82;
 allow 163.172.213.212;
 allow 163.172.45.102;
 allow 163.5.143.76;
-allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.71.6.109;
 allow 167.99.208.41;
@@ -273,6 +271,7 @@ allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.113.128.30;
+allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
 allow 185.129.61.2;
@@ -552,7 +551,6 @@ allow 185.246.188.149;
 allow 185.246.188.67;
 allow 185.246.188.73;
 allow 185.246.188.74;
-allow 185.246.189.99;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
@@ -820,6 +818,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:89c:666::1;
+allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
@@ -834,7 +833,6 @@ allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
-allow 2001:bc8:710:3672:dc00:ff:fe42:19db;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 200.25.27.112;
@@ -894,6 +892,7 @@ allow 23.129.64.136;
 allow 23.129.64.137;
 allow 23.129.64.138;
 allow 23.129.64.139;
+allow 23.129.64.140;
 allow 23.129.64.141;
 allow 23.129.64.142;
 allow 23.129.64.143;
@@ -1116,6 +1115,7 @@ allow 2620:18c:0:192::136;
 allow 2620:18c:0:192::137;
 allow 2620:18c:0:192::138;
 allow 2620:18c:0:192::139;
+allow 2620:18c:0:192::140;
 allow 2620:18c:0:192::141;
 allow 2620:18c:0:192::142;
 allow 2620:18c:0:192::143;
@@ -1180,6 +1180,7 @@ allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
+allow 2a02:2970:1001::4c;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
@@ -1297,7 +1298,6 @@ allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
-allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
@@ -1640,6 +1640,7 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
+allow 46.182.21.250;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1647,7 +1648,6 @@ allow 46.38.255.27;
 allow 47.243.74.136;
 allow 50.3.182.133;
 allow 50.3.182.156;
-allow 51.15.227.109;
 allow 51.15.249.160;
 allow 51.15.59.15;
 allow 51.158.115.62;
@@ -1669,7 +1669,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1694,7 +1693,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.197.63.94;
+allow 5.39.25.229;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1804,7 +1803,6 @@ allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.163.155.136;
 allow 89.185.85.140;
-allow 89.187.143.31;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.58.18.210;
