--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -3,7 +3,6 @@ allow 102.130.127.117;
 allow 103.106.3.94;
 allow 103.109.101.105;
 allow 103.126.161.54;
-allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.193.179.233;
 allow 103.196.37.111;
@@ -19,6 +18,7 @@ allow 104.192.171.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
+allow 104.219.236.93;
 allow 104.237.158.32;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -169,7 +169,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 156.146.63.136;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -188,6 +187,7 @@ allow 162.81.29.82;
 allow 163.172.213.212;
 allow 163.172.45.102;
 allow 163.5.143.76;
+allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.71.6.109;
 allow 167.99.208.41;
@@ -301,6 +301,7 @@ allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.174.136.114;
 allow 185.177.151.34;
+allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
 allow 185.181.61.18;
@@ -576,7 +577,6 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.147.227.40;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -649,7 +649,6 @@ allow 193.163.170.149;
 allow 193.168.141.245;
 allow 193.189.100.194;
 allow 193.189.100.195;
-allow 193.189.100.196;
 allow 193.189.100.197;
 allow 193.189.100.198;
 allow 193.189.100.199;
@@ -689,7 +688,6 @@ allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
-allow 196.189.30.114;
 allow 198.144.178.163;
 allow 198.23.133.132;
 allow 198.251.84.163;
@@ -742,7 +740,6 @@ allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
-allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -836,6 +833,7 @@ allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 200.25.27.112;
+allow 201.137.14.124;
 allow 202.61.226.98;
 allow 202.69.76.36;
 allow 204.137.14.104;
@@ -884,7 +882,6 @@ allow 217.160.88.146;
 allow 217.27.189.205;
 allow 23.129.64.130;
 allow 23.129.64.131;
-allow 23.129.64.132;
 allow 23.129.64.133;
 allow 23.129.64.134;
 allow 23.129.64.135;
@@ -1107,7 +1104,6 @@ allow 2607:b500:408:3100::1;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::130;
 allow 2620:18c:0:192::131;
-allow 2620:18c:0:192::132;
 allow 2620:18c:0:192::133;
 allow 2620:18c:0:192::134;
 allow 2620:18c:0:192::135;
@@ -1169,7 +1165,6 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
-allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1232,6 +1227,7 @@ allow 2a03:94e0:24d4::7;
 allow 2a03:94e0:24d4::8;
 allow 2a03:94e0:24d4::9;
 allow 2a03:94e0:2660:4819:623:8331:4852:1;
+allow 2a03:94e0:ffff:185:181:60:0:135;
 allow 2a03:94e0:ffff:185:181:61:0:115;
 allow 2a03:94e0:ffff:185:181:61:0:142;
 allow 2a03:94e0:ffff:185:181:61:0:18;
@@ -1504,7 +1500,6 @@ allow 2a0e:fa00:0:d0::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
-allow 2a0f:df00:0:255::196;
 allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
@@ -1553,6 +1548,7 @@ allow 2a12:62c0::254;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
+allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 35.0.127.52;
@@ -1620,6 +1616,7 @@ allow 45.79.177.21;
 allow 45.79.50.161;
 allow 45.80.158.205;
 allow 45.80.158.27;
+allow 45.80.208.123;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.87.154.151;
@@ -1668,6 +1665,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.206.215.201;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1701,6 +1699,7 @@ allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
+allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
@@ -1727,13 +1726,11 @@ allow 74.119.195.4;
 allow 74.119.195.92;
 allow 74.207.248.172;
 allow 74.208.106.128;
-allow 74.82.47.194;
 allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.232.143.243;
 allow 77.232.143.248;
 allow 77.232.143.255;
-allow 77.48.28.204;
 allow 77.48.28.239;
 allow 77.72.85.119;
 allow 77.81.247.72;
@@ -1803,6 +1800,7 @@ allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.163.155.136;
 allow 89.185.85.140;
+allow 89.187.143.31;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.58.18.210;
@@ -1842,10 +1840,8 @@ allow 93.243.56.177;
 allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
-allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.230.54;
-allow 93.99.104.18;
 allow 93.99.104.194;
 allow 94.102.51.15;
 allow 94.131.110.58;
