--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -20,7 +20,6 @@ deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
-deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -242,7 +241,6 @@ deny 2607:b500:408:3100::1;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::130;
 deny 2620:18c:0:192::131;
-deny 2620:18c:0:192::132;
 deny 2620:18c:0:192::133;
 deny 2620:18c:0:192::134;
 deny 2620:18c:0:192::135;
@@ -303,7 +301,6 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:2017:1::169;
 deny 2a01:4262:1ab:ffff::133;
-deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
@@ -366,6 +363,7 @@ deny 2a03:94e0:24d4::7;
 deny 2a03:94e0:24d4::8;
 deny 2a03:94e0:24d4::9;
 deny 2a03:94e0:2660:4819:623:8331:4852:1;
+deny 2a03:94e0:ffff:185:181:60:0:135;
 deny 2a03:94e0:ffff:185:181:61:0:115;
 deny 2a03:94e0:ffff:185:181:61:0:142;
 deny 2a03:94e0:ffff:185:181:61:0:18;
@@ -638,7 +636,6 @@ deny 2a0e:fa00:0:d0::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
-deny 2a0f:df00:0:255::196;
 deny 2a0f:df00:0:255::197;
 deny 2a0f:df00:0:255::198;
 deny 2a0f:df00:0:255::199;
