--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -3,7 +3,6 @@ set_real_ip_from 102.130.127.117;
 set_real_ip_from 103.106.3.94;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
-set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
@@ -19,6 +18,7 @@ set_real_ip_from 104.192.171.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
+set_real_ip_from 104.219.236.93;
 set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -169,7 +169,6 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 156.146.63.136;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -188,6 +187,7 @@ set_real_ip_from 162.81.29.82;
 set_real_ip_from 163.172.213.212;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
+set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 167.71.6.109;
 set_real_ip_from 167.99.208.41;
@@ -301,6 +301,7 @@ set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.174.136.114;
 set_real_ip_from 185.177.151.34;
+set_real_ip_from 185.181.60.135;
 set_real_ip_from 185.181.61.115;
 set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.181.61.18;
@@ -576,7 +577,6 @@ set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
-set_real_ip_from 189.147.227.40;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
@@ -649,7 +649,6 @@ set_real_ip_from 193.163.170.149;
 set_real_ip_from 193.168.141.245;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
-set_real_ip_from 193.189.100.196;
 set_real_ip_from 193.189.100.197;
 set_real_ip_from 193.189.100.198;
 set_real_ip_from 193.189.100.199;
@@ -689,7 +688,6 @@ set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.80.151.30;
 set_real_ip_from 195.88.74.206;
-set_real_ip_from 196.189.30.114;
 set_real_ip_from 198.144.178.163;
 set_real_ip_from 198.23.133.132;
 set_real_ip_from 198.251.84.163;
@@ -742,7 +740,6 @@ set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
-set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -836,6 +833,7 @@ set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 200.25.27.112;
+set_real_ip_from 201.137.14.124;
 set_real_ip_from 202.61.226.98;
 set_real_ip_from 202.69.76.36;
 set_real_ip_from 204.137.14.104;
@@ -884,7 +882,6 @@ set_real_ip_from 217.160.88.146;
 set_real_ip_from 217.27.189.205;
 set_real_ip_from 23.129.64.130;
 set_real_ip_from 23.129.64.131;
-set_real_ip_from 23.129.64.132;
 set_real_ip_from 23.129.64.133;
 set_real_ip_from 23.129.64.134;
 set_real_ip_from 23.129.64.135;
@@ -1107,7 +1104,6 @@ set_real_ip_from 2607:b500:408:3100::1;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::130;
 set_real_ip_from 2620:18c:0:192::131;
-set_real_ip_from 2620:18c:0:192::132;
 set_real_ip_from 2620:18c:0:192::133;
 set_real_ip_from 2620:18c:0:192::134;
 set_real_ip_from 2620:18c:0:192::135;
@@ -1169,7 +1165,6 @@ set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
-set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1232,6 +1227,7 @@ set_real_ip_from 2a03:94e0:24d4::7;
 set_real_ip_from 2a03:94e0:24d4::8;
 set_real_ip_from 2a03:94e0:24d4::9;
 set_real_ip_from 2a03:94e0:2660:4819:623:8331:4852:1;
+set_real_ip_from 2a03:94e0:ffff:185:181:60:0:135;
 set_real_ip_from 2a03:94e0:ffff:185:181:61:0:115;
 set_real_ip_from 2a03:94e0:ffff:185:181:61:0:142;
 set_real_ip_from 2a03:94e0:ffff:185:181:61:0:18;
@@ -1504,7 +1500,6 @@ set_real_ip_from 2a0e:fa00:0:d0::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
-set_real_ip_from 2a0f:df00:0:255::196;
 set_real_ip_from 2a0f:df00:0:255::197;
 set_real_ip_from 2a0f:df00:0:255::198;
 set_real_ip_from 2a0f:df00:0:255::199;
@@ -1553,6 +1548,7 @@ set_real_ip_from 2a12:62c0::254;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
+set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 35.0.127.52;
@@ -1620,6 +1616,7 @@ set_real_ip_from 45.79.177.21;
 set_real_ip_from 45.79.50.161;
 set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.27;
+set_real_ip_from 45.80.208.123;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.87.154.151;
@@ -1668,6 +1665,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.206.215.201;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
@@ -1701,6 +1699,7 @@ set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
 set_real_ip_from 5.42.80.235;
 set_real_ip_from 54.36.101.21;
+set_real_ip_from 54.36.108.162;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
@@ -1727,13 +1726,11 @@ set_real_ip_from 74.119.195.4;
 set_real_ip_from 74.119.195.92;
 set_real_ip_from 74.207.248.172;
 set_real_ip_from 74.208.106.128;
-set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
 set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.232.143.243;
 set_real_ip_from 77.232.143.248;
 set_real_ip_from 77.232.143.255;
-set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.72.85.119;
 set_real_ip_from 77.81.247.72;
@@ -1803,6 +1800,7 @@ set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.163.155.136;
 set_real_ip_from 89.185.85.140;
+set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.58.18.210;
@@ -1842,10 +1840,8 @@ set_real_ip_from 93.243.56.177;
 set_real_ip_from 93.90.74.31;
 set_real_ip_from 93.95.225.141;
 set_real_ip_from 93.95.228.125;
-set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.230.54;
-set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.131.110.58;
