Update lists at 20240315-0000

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -20,6 +20,7 @@ allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
+allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -652,18 +653,13 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
-allow 2a10:1fc0:1::1078:9b3b;
 allow 2a10:1fc0:1::1ec2:efbe;
 allow 2a10:1fc0:1::6017:3c35;
 allow 2a10:1fc0:1::7895:f9ac;
-allow 2a10:1fc0:1::9a01:890f;
-allow 2a10:1fc0:1::ac76:4d41;
 allow 2a10:1fc0:1::b087:a0ce;
 allow 2a10:1fc0:1::b81d:9391;
-allow 2a10:1fc0:1::c0a:270f;
 allow 2a10:1fc0:1::c0c7:2c7;
 allow 2a10:1fc0:1::d613:61fb;
-allow 2a10:1fc0:1::d717:cb95;
 allow 2a10:1fc0:1::ef6b:36d;
 allow 2a10:1fc0:1::f764:512;
 allow 2a10:1fc0:1::fed5:16e7;
