--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -20,6 +20,7 @@ deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
+deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -652,18 +653,13 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
-deny 2a10:1fc0:1::1078:9b3b;
 deny 2a10:1fc0:1::1ec2:efbe;
 deny 2a10:1fc0:1::6017:3c35;
 deny 2a10:1fc0:1::7895:f9ac;
-deny 2a10:1fc0:1::9a01:890f;
-deny 2a10:1fc0:1::ac76:4d41;
 deny 2a10:1fc0:1::b087:a0ce;
 deny 2a10:1fc0:1::b81d:9391;
-deny 2a10:1fc0:1::c0a:270f;
 deny 2a10:1fc0:1::c0c7:2c7;
 deny 2a10:1fc0:1::d613:61fb;
-deny 2a10:1fc0:1::d717:cb95;
 deny 2a10:1fc0:1::ef6b:36d;
 deny 2a10:1fc0:1::f764:512;
 deny 2a10:1fc0:1::fed5:16e7;
