--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -3,6 +3,7 @@ allow 102.130.127.117;
 allow 103.106.3.94;
 allow 103.109.101.105;
 allow 103.126.161.54;
+allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.193.179.233;
 allow 103.196.37.111;
@@ -18,7 +19,6 @@ allow 104.192.171.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
-allow 104.219.236.93;
 allow 104.237.158.32;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -41,6 +41,7 @@ allow 104.244.79.61;
 allow 107.172.13.143;
 allow 107.172.31.146;
 allow 107.172.31.165;
+allow 107.174.138.172;
 allow 107.174.231.197;
 allow 107.189.10.141;
 allow 107.189.10.175;
@@ -116,9 +117,6 @@ allow 130.193.15.186;
 allow 130.193.15.79;
 allow 135.125.205.25;
 allow 136.244.111.163;
-allow 138.124.184.117;
-allow 138.124.184.143;
-allow 138.124.184.244;
 allow 138.128.222.68;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -127,19 +125,8 @@ allow 141.98.11.62;
 allow 141.98.168.146;
 allow 141.98.168.147;
 allow 141.98.168.148;
-allow 141.98.168.155;
 allow 141.98.168.157;
 allow 141.98.168.161;
-allow 141.98.168.162;
-allow 141.98.168.166;
-allow 141.98.168.167;
-allow 141.98.168.168;
-allow 141.98.168.34;
-allow 141.98.168.35;
-allow 141.98.168.36;
-allow 141.98.168.51;
-allow 141.98.168.53;
-allow 141.98.168.54;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 143.42.110.237;
@@ -150,12 +137,9 @@ allow 144.172.73.11;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
-allow 146.19.143.113;
 allow 146.19.143.122;
 allow 146.19.143.52;
 allow 146.19.143.58;
-allow 146.19.143.64;
-allow 146.19.143.82;
 allow 146.59.234.220;
 allow 146.59.35.246;
 allow 146.59.35.38;
@@ -163,7 +147,6 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
-allow 152.42.137.210;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 156.146.63.136;
@@ -190,7 +173,6 @@ allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.71.6.109;
 allow 167.99.208.41;
-allow 167.99.44.158;
 allow 170.187.228.128;
 allow 171.25.193.20;
 allow 171.25.193.234;
@@ -645,7 +627,6 @@ allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.109.120.143;
 allow 193.109.120.160;
-allow 193.109.120.85;
 allow 193.163.170.149;
 allow 193.168.141.245;
 allow 193.189.100.194;
@@ -742,6 +723,7 @@ allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
+allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -1518,18 +1500,13 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
-allow 2a10:1fc0:1::1078:9b3b;
 allow 2a10:1fc0:1::1ec2:efbe;
 allow 2a10:1fc0:1::6017:3c35;
 allow 2a10:1fc0:1::7895:f9ac;
-allow 2a10:1fc0:1::9a01:890f;
-allow 2a10:1fc0:1::ac76:4d41;
 allow 2a10:1fc0:1::b087:a0ce;
 allow 2a10:1fc0:1::b81d:9391;
-allow 2a10:1fc0:1::c0a:270f;
 allow 2a10:1fc0:1::c0c7:2c7;
 allow 2a10:1fc0:1::d613:61fb;
-allow 2a10:1fc0:1::d717:cb95;
 allow 2a10:1fc0:1::ef6b:36d;
 allow 2a10:1fc0:1::f764:512;
 allow 2a10:1fc0:1::fed5:16e7;
@@ -1557,7 +1534,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 34.196.62.105;
+allow 3.209.141.45;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1574,7 +1551,6 @@ allow 45.120.178.198;
 allow 45.120.178.253;
 allow 45.120.178.83;
 allow 45.128.232.151;
-allow 45.129.199.163;
 allow 45.129.199.22;
 allow 45.130.20.250;
 allow 45.132.246.245;
@@ -1605,7 +1581,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.14.247.170;
 allow 45.144.29.134;
 allow 45.15.157.177;
 allow 45.15.158.165;
@@ -1704,18 +1679,15 @@ allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
-allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
 allow 64.227.115.78;
 allow 64.5.123.66;
 allow 65.109.30.253;
-allow 65.38.121.14;
 allow 66.146.193.33;
 allow 66.175.223.155;
 allow 66.220.242.222;
@@ -1725,12 +1697,12 @@ allow 70.53.133.193;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
-allow 72.5.42.31;
 allow 74.119.195.235;
 allow 74.119.195.4;
 allow 74.119.195.92;
 allow 74.207.248.172;
 allow 74.208.106.128;
+allow 74.82.47.194;
 allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.232.143.243;
@@ -1755,7 +1727,6 @@ allow 80.67.172.162;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
@@ -1805,7 +1776,6 @@ allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.163.155.136;
 allow 89.185.85.140;
-allow 89.187.143.31;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.58.18.210;
@@ -1845,17 +1815,12 @@ allow 93.243.56.177;
 allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
+allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.230.54;
 allow 93.99.104.18;
+allow 93.99.104.194;
 allow 94.102.51.15;
-allow 94.131.110.58;
-allow 94.131.111.196;
-allow 94.131.111.69;
-allow 94.131.111.73;
-allow 94.131.120.40;
-allow 94.131.120.41;
-allow 94.131.120.63;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
@@ -1877,10 +1842,12 @@ allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
-allow 95.164.16.105;
-allow 95.164.16.149;
-allow 95.164.16.80;
 allow 95.164.22.4;
+allow 95.164.33.22;
+allow 95.164.33.23;
+allow 95.164.33.25;
+allow 95.164.33.37;
+allow 95.164.33.42;
 allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
