--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -3,6 +3,7 @@ set_real_ip_from 102.130.127.117;
 set_real_ip_from 103.106.3.94;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
+set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
@@ -18,7 +19,6 @@ set_real_ip_from 104.192.171.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
-set_real_ip_from 104.219.236.93;
 set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -41,6 +41,7 @@ set_real_ip_from 104.244.79.61;
 set_real_ip_from 107.172.13.143;
 set_real_ip_from 107.172.31.146;
 set_real_ip_from 107.172.31.165;
+set_real_ip_from 107.174.138.172;
 set_real_ip_from 107.174.231.197;
 set_real_ip_from 107.189.10.141;
 set_real_ip_from 107.189.10.175;
@@ -116,9 +117,6 @@ set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
-set_real_ip_from 138.124.184.117;
-set_real_ip_from 138.124.184.143;
-set_real_ip_from 138.124.184.244;
 set_real_ip_from 138.128.222.68;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
@@ -127,19 +125,8 @@ set_real_ip_from 141.98.11.62;
 set_real_ip_from 141.98.168.146;
 set_real_ip_from 141.98.168.147;
 set_real_ip_from 141.98.168.148;
-set_real_ip_from 141.98.168.155;
 set_real_ip_from 141.98.168.157;
 set_real_ip_from 141.98.168.161;
-set_real_ip_from 141.98.168.162;
-set_real_ip_from 141.98.168.166;
-set_real_ip_from 141.98.168.167;
-set_real_ip_from 141.98.168.168;
-set_real_ip_from 141.98.168.34;
-set_real_ip_from 141.98.168.35;
-set_real_ip_from 141.98.168.36;
-set_real_ip_from 141.98.168.51;
-set_real_ip_from 141.98.168.53;
-set_real_ip_from 141.98.168.54;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
 set_real_ip_from 143.42.110.237;
@@ -150,12 +137,9 @@ set_real_ip_from 144.172.73.11;
 set_real_ip_from 144.172.73.6;
 set_real_ip_from 144.217.80.80;
 set_real_ip_from 144.24.197.112;
-set_real_ip_from 146.19.143.113;
 set_real_ip_from 146.19.143.122;
 set_real_ip_from 146.19.143.52;
 set_real_ip_from 146.19.143.58;
-set_real_ip_from 146.19.143.64;
-set_real_ip_from 146.19.143.82;
 set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
 set_real_ip_from 146.59.35.38;
@@ -163,7 +147,6 @@ set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
-set_real_ip_from 152.42.137.210;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 156.146.63.136;
@@ -190,7 +173,6 @@ set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 167.71.6.109;
 set_real_ip_from 167.99.208.41;
-set_real_ip_from 167.99.44.158;
 set_real_ip_from 170.187.228.128;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
@@ -645,7 +627,6 @@ set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
 set_real_ip_from 193.109.120.143;
 set_real_ip_from 193.109.120.160;
-set_real_ip_from 193.109.120.85;
 set_real_ip_from 193.163.170.149;
 set_real_ip_from 193.168.141.245;
 set_real_ip_from 193.189.100.194;
@@ -742,6 +723,7 @@ set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
+set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -1518,18 +1500,13 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
-set_real_ip_from 2a10:1fc0:1::1078:9b3b;
 set_real_ip_from 2a10:1fc0:1::1ec2:efbe;
 set_real_ip_from 2a10:1fc0:1::6017:3c35;
 set_real_ip_from 2a10:1fc0:1::7895:f9ac;
-set_real_ip_from 2a10:1fc0:1::9a01:890f;
-set_real_ip_from 2a10:1fc0:1::ac76:4d41;
 set_real_ip_from 2a10:1fc0:1::b087:a0ce;
 set_real_ip_from 2a10:1fc0:1::b81d:9391;
-set_real_ip_from 2a10:1fc0:1::c0a:270f;
 set_real_ip_from 2a10:1fc0:1::c0c7:2c7;
 set_real_ip_from 2a10:1fc0:1::d613:61fb;
-set_real_ip_from 2a10:1fc0:1::d717:cb95;
 set_real_ip_from 2a10:1fc0:1::ef6b:36d;
 set_real_ip_from 2a10:1fc0:1::f764:512;
 set_real_ip_from 2a10:1fc0:1::fed5:16e7;
@@ -1557,7 +1534,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 34.196.62.105;
+set_real_ip_from 3.209.141.45;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1574,7 +1551,6 @@ set_real_ip_from 45.120.178.198;
 set_real_ip_from 45.120.178.253;
 set_real_ip_from 45.120.178.83;
 set_real_ip_from 45.128.232.151;
-set_real_ip_from 45.129.199.163;
 set_real_ip_from 45.129.199.22;
 set_real_ip_from 45.130.20.250;
 set_real_ip_from 45.132.246.245;
@@ -1605,7 +1581,6 @@ set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
-set_real_ip_from 45.14.247.170;
 set_real_ip_from 45.144.29.134;
 set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.15.158.165;
@@ -1704,18 +1679,15 @@ set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
 set_real_ip_from 5.42.80.235;
 set_real_ip_from 54.36.101.21;
-set_real_ip_from 54.36.108.162;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
 set_real_ip_from 65.109.30.253;
-set_real_ip_from 65.38.121.14;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.175.223.155;
 set_real_ip_from 66.220.242.222;
@@ -1725,12 +1697,12 @@ set_real_ip_from 70.53.133.193;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.167.47.69;
-set_real_ip_from 72.5.42.31;
 set_real_ip_from 74.119.195.235;
 set_real_ip_from 74.119.195.4;
 set_real_ip_from 74.119.195.92;
 set_real_ip_from 74.207.248.172;
 set_real_ip_from 74.208.106.128;
+set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
 set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.232.143.243;
@@ -1755,7 +1727,6 @@ set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
-set_real_ip_from 81.64.1.143;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
@@ -1805,7 +1776,6 @@ set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.163.155.136;
 set_real_ip_from 89.185.85.140;
-set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.58.18.210;
@@ -1845,17 +1815,12 @@ set_real_ip_from 93.243.56.177;
 set_real_ip_from 93.90.74.31;
 set_real_ip_from 93.95.225.141;
 set_real_ip_from 93.95.228.125;
+set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.230.54;
 set_real_ip_from 93.99.104.18;
+set_real_ip_from 93.99.104.194;
 set_real_ip_from 94.102.51.15;
-set_real_ip_from 94.131.110.58;
-set_real_ip_from 94.131.111.196;
-set_real_ip_from 94.131.111.69;
-set_real_ip_from 94.131.111.73;
-set_real_ip_from 94.131.120.40;
-set_real_ip_from 94.131.120.41;
-set_real_ip_from 94.131.120.63;
 set_real_ip_from 94.140.115.63;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
@@ -1877,10 +1842,12 @@ set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
-set_real_ip_from 95.164.16.105;
-set_real_ip_from 95.164.16.149;
-set_real_ip_from 95.164.16.80;
 set_real_ip_from 95.164.22.4;
+set_real_ip_from 95.164.33.22;
+set_real_ip_from 95.164.33.23;
+set_real_ip_from 95.164.33.25;
+set_real_ip_from 95.164.33.37;
+set_real_ip_from 95.164.33.42;
 set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
