--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -13,13 +14,11 @@ allow 103.251.167.20;
 allow 103.253.24.18;
 allow 104.167.242.116;
 allow 104.167.242.117;
-allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.171.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
-allow 104.219.236.93;
 allow 104.237.158.32;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -141,13 +140,13 @@ allow 144.24.197.112;
 allow 146.19.143.122;
 allow 146.19.143.52;
 allow 146.19.143.58;
-allow 146.59.234.220;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
+allow 152.53.35.204;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
@@ -187,7 +186,6 @@ allow 172.232.161.206;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.131.84;
-allow 173.232.195.137;
 allow 173.232.195.144;
 allow 173.232.195.146;
 allow 173.249.57.253;
@@ -225,13 +223,12 @@ allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
-allow 179.43.167.194;
+allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 184.105.48.40;
 allow 184.75.221.163;
-allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
 allow 185.100.85.24;
@@ -285,7 +282,6 @@ allow 185.181.61.18;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
-allow 185.193.158.134;
 allow 185.193.52.180;
 allow 185.195.237.238;
 allow 185.195.71.10;
@@ -846,6 +842,7 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.136.84.104;
+allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -966,7 +963,6 @@ allow 2602:fc24:18:1be9::1;
 allow 2602:fc24:18:1c54::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
-allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
 allow 2603:3:6107:47a0::;
@@ -1274,7 +1270,9 @@ allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
+allow 2a0a:3840:8078:24:0:504e:18cf:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
+allow 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
@@ -1472,7 +1470,6 @@ allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:d0::1;
-allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1521,7 +1518,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 35.0.127.52;
-allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
 allow 37.120.239.59;
@@ -1532,6 +1528,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.205.186.236;
 allow 45.120.178.198;
 allow 45.120.178.253;
 allow 45.120.178.83;
@@ -1634,7 +1631,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1670,7 +1666,7 @@ allow 54.36.101.21;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.87.163.166;
+allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
 allow 64.227.115.78;
@@ -1710,6 +1706,7 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
+allow 80.78.24.207;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
