--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -137,7 +137,6 @@ allow 2602:fc24:18:1be9::1;
 allow 2602:fc24:18:1c54::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
-allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
 allow 2603:3:6107:47a0::;
@@ -444,7 +443,9 @@ allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
+allow 2a0a:3840:8078:24:0:504e:18cf:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
+allow 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
@@ -642,7 +643,6 @@ allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:d0::1;
-allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
