--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -27,7 +26,6 @@ allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
 allow 104.244.74.23;
-allow 104.244.74.97;
 allow 104.244.75.74;
 allow 104.244.77.192;
 allow 104.244.77.208;
@@ -140,6 +138,7 @@ allow 144.24.197.112;
 allow 146.19.143.122;
 allow 146.19.143.52;
 allow 146.19.143.58;
+allow 146.59.234.220;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 149.202.79.129;
@@ -150,6 +149,7 @@ allow 152.53.35.204;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -186,6 +186,7 @@ allow 172.232.161.206;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.131.84;
+allow 173.232.195.137;
 allow 173.232.195.144;
 allow 173.232.195.146;
 allow 173.249.57.253;
@@ -219,7 +220,6 @@ allow 179.43.159.195;
 allow 179.43.159.196;
 allow 179.43.159.197;
 allow 179.43.159.198;
-allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
@@ -229,6 +229,7 @@ allow 179.43.182.58;
 allow 180.150.226.99;
 allow 184.105.48.40;
 allow 184.75.221.163;
+allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
 allow 185.100.85.24;
@@ -282,6 +283,7 @@ allow 185.181.61.18;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
+allow 185.193.158.134;
 allow 185.193.52.180;
 allow 185.195.237.238;
 allow 185.195.71.10;
@@ -813,6 +815,7 @@ allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
+allow 204.48.25.20;
 allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
@@ -902,6 +905,7 @@ allow 23.137.249.240;
 allow 23.137.249.8;
 allow 23.137.250.34;
 allow 23.137.250.83;
+allow 23.145.40.101;
 allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
@@ -928,7 +932,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
@@ -946,7 +949,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
@@ -971,6 +973,7 @@ allow 2603:3:610c:7640::;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
+allow 2604:a880:400:d0::148f:2001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1046,7 +1049,6 @@ allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
-allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f8e6:9fae:c86f:2d71:6c28;
@@ -1270,6 +1272,7 @@ allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
+allow 2a07:e04:3:10::1;
 allow 2a0a:3840:8078:24:0:504e:18cf:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
@@ -1470,6 +1473,7 @@ allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:d0::1;
+allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1517,7 +1521,9 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
+allow 3.234.114.191;
 allow 35.0.127.52;
+allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
 allow 37.120.239.59;
@@ -1528,7 +1534,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.205.186.236;
 allow 45.120.178.198;
 allow 45.120.178.253;
 allow 45.120.178.83;
@@ -1814,6 +1819,7 @@ allow 94.103.124.46;
 allow 94.103.124.90;
 allow 94.103.124.91;
 allow 94.103.124.98;
+allow 94.131.110.58;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
