--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -19,7 +19,6 @@ deny 104.192.171.138;
 deny 104.192.3.74;
 deny 104.219.232.126;
 deny 104.219.236.100;
-deny 104.219.236.93;
 deny 104.237.158.32;
 deny 104.244.72.115;
 deny 104.244.72.132;
@@ -109,6 +108,7 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 114.199.75.111;
+deny 118.163.74.160;
 deny 125.212.241.131;
 deny 128.127.180.156;
 deny 128.31.0.13;
@@ -231,6 +231,7 @@ deny 179.43.167.205;
 deny 179.43.182.232;
 deny 179.43.182.58;
 deny 180.150.226.99;
+deny 18.235.214.196;
 deny 184.105.48.40;
 deny 184.75.221.163;
 deny 185.100.85.132;
@@ -248,6 +249,7 @@ deny 185.100.87.253;
 deny 185.100.87.41;
 deny 185.10.16.41;
 deny 185.106.102.102;
+deny 185.106.94.195;
 deny 185.107.70.56;
 deny 185.113.128.30;
 deny 185.129.61.1;
@@ -316,7 +318,6 @@ deny 185.220.100.247;
 deny 185.220.100.248;
 deny 185.220.100.249;
 deny 185.220.100.250;
-deny 185.220.100.251;
 deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
@@ -805,6 +806,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -935,6 +937,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.184.48.101;
 deny 23.184.48.127;
 deny 23.184.48.128;
@@ -951,6 +954,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
@@ -1293,7 +1297,6 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
-deny 2a0b:f4c0:16c:5::1;
 deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
@@ -1640,7 +1643,6 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.20.174.244;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.101.10;
@@ -1722,6 +1724,7 @@ deny 80.78.24.207;
 deny 80.82.78.14;
 deny 81.16.33.42;
 deny 81.17.28.95;
+deny 81.64.1.143;
 deny 82.118.242.158;
 deny 82.153.138.120;
 deny 82.153.138.153;
