--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -107,6 +107,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -119,6 +120,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
@@ -460,7 +462,6 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
-deny 2a0b:f4c0:16c:5::1;
 deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
