--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -108,9 +107,9 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
-allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
@@ -280,6 +279,7 @@ allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.174.136.114;
 allow 185.177.151.34;
+allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
 allow 185.181.61.18;
@@ -309,7 +309,6 @@ allow 185.220.100.241;
 allow 185.220.100.242;
 allow 185.220.100.243;
 allow 185.220.100.244;
-allow 185.220.100.245;
 allow 185.220.100.246;
 allow 185.220.100.247;
 allow 185.220.100.248;
@@ -614,7 +613,6 @@ allow 192.42.116.218;
 allow 192.42.116.219;
 allow 192.42.116.220;
 allow 192.42.116.221;
-allow 192.42.116.23;
 allow 192.42.116.24;
 allow 192.42.116.25;
 allow 192.42.116.26;
@@ -789,7 +787,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5517;
 allow 2001:67c:6ec:203:218:33ff:fe44:5518;
 allow 2001:67c:6ec:203:218:33ff:fe44:5519;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
-allow 2001:67c:6ec:203:218:33ff:fe44:5523;
 allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
@@ -806,6 +803,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -843,6 +841,7 @@ allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
+allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.69.167.80;
 allow 212.73.134.204;
@@ -1197,6 +1196,7 @@ allow 2a03:94e0:24d4::7;
 allow 2a03:94e0:24d4::8;
 allow 2a03:94e0:24d4::9;
 allow 2a03:94e0:2660:4819:623:8331:4852:1;
+allow 2a03:94e0:ffff:185:181:60:0:135;
 allow 2a03:94e0:ffff:185:181:61:0:115;
 allow 2a03:94e0:ffff:185:181:61:0:142;
 allow 2a03:94e0:ffff:185:181:61:0:18;
@@ -1285,7 +1285,6 @@ allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
-allow 2a0b:f4c0:16c:11::1;
 allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
@@ -1641,6 +1640,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.203.226.7;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1664,7 +1664,6 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
-allow 52.7.241.168;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
@@ -1675,7 +1674,6 @@ allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
-allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
@@ -1689,6 +1687,7 @@ allow 66.175.223.155;
 allow 66.220.242.222;
 allow 66.78.40.139;
 allow 67.219.109.141;
+allow 69.236.101.146;
 allow 70.53.133.193;
 allow 71.19.144.106;
 allow 72.14.179.10;
@@ -1722,7 +1721,6 @@ allow 80.78.24.207;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
