--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -90,7 +90,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5517;
 allow 2001:67c:6ec:203:218:33ff:fe44:5518;
 allow 2001:67c:6ec:203:218:33ff:fe44:5519;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
-allow 2001:67c:6ec:203:218:33ff:fe44:5523;
 allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
@@ -107,6 +106,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -363,6 +363,7 @@ allow 2a03:94e0:24d4::7;
 allow 2a03:94e0:24d4::8;
 allow 2a03:94e0:24d4::9;
 allow 2a03:94e0:2660:4819:623:8331:4852:1;
+allow 2a03:94e0:ffff:185:181:60:0:135;
 allow 2a03:94e0:ffff:185:181:61:0:115;
 allow 2a03:94e0:ffff:185:181:61:0:142;
 allow 2a03:94e0:ffff:185:181:61:0:18;
@@ -451,7 +452,6 @@ allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
-allow 2a0b:f4c0:16c:11::1;
 allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
