--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -88,8 +88,8 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5514;
 deny 2001:67c:6ec:203:218:33ff:fe44:5515;
 deny 2001:67c:6ec:203:218:33ff:fe44:5517;
 deny 2001:67c:6ec:203:218:33ff:fe44:5518;
-deny 2001:67c:6ec:203:218:33ff:fe44:5519;
 deny 2001:67c:6ec:203:218:33ff:fe44:5520;
+deny 2001:67c:6ec:203:218:33ff:fe44:5523;
 deny 2001:67c:6ec:203:218:33ff:fe44:5524;
 deny 2001:67c:6ec:203:218:33ff:fe44:5525;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
@@ -308,6 +308,7 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
 deny 2a01:7e01::f03c:93ff:fef8:bd60;
 deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
+deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:13f0:8100:6:6bc:499d:b353:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
@@ -452,6 +453,7 @@ deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
 deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
