--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -172,7 +172,6 @@ allow 163.172.45.102;
 allow 163.5.143.76;
 allow 165.73.242.163;
 allow 166.70.207.2;
-allow 167.71.6.109;
 allow 167.99.208.41;
 allow 170.187.228.128;
 allow 171.25.193.20;
@@ -187,6 +186,7 @@ allow 172.104.214.41;
 allow 172.104.243.155;
 allow 172.232.161.205;
 allow 172.232.161.206;
+allow 172.232.55.54;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.131.84;
@@ -195,7 +195,6 @@ allow 173.232.195.144;
 allow 173.232.195.146;
 allow 173.249.57.253;
 allow 173.255.255.215;
-allow 175.214.127.6;
 allow 176.118.193.33;
 allow 176.124.32.173;
 allow 176.126.253.190;
@@ -255,7 +254,6 @@ allow 185.107.70.56;
 allow 185.113.128.30;
 allow 185.129.61.1;
 allow 185.129.61.10;
-allow 185.129.61.129;
 allow 185.129.61.2;
 allow 185.129.61.3;
 allow 185.129.61.4;
@@ -538,6 +536,8 @@ allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
+allow 185.29.9.156;
+allow 185.29.9.157;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -796,7 +796,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
-allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -956,6 +955,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2600:3c07::f03c:94ff:fe12:513e;
 allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
@@ -1123,6 +1123,7 @@ allow 2a00:1169:110:2990::;
 allow 2a00:1169:112:de0::;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
+allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
@@ -1212,7 +1213,6 @@ allow 2a03:94e0:ffff:185:243:218:0:35;
 allow 2a03:94e0:ffff:185:243:218:0:41;
 allow 2a03:94e0:ffff:185:243:218:0:46;
 allow 2a03:94e0:ffff:185:243:218:0:89;
-allow 2a03:b0c0:2:d0::1768:8001;
 allow 2a03:b0c0:2:d0::f1b:2001;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
@@ -1642,7 +1642,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.206.60.170;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1669,6 +1668,7 @@ allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
+allow 54.204.14.235;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
