--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -94,7 +94,6 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5524;
 deny 2001:67c:6ec:203:218:33ff:fe44:5525;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
-deny 2001:67c:89c:666::1;
 deny 2001:67c:89c:702:1ce:1ce:babe:1;
 deny 2001:67c:89c:702:1ce:1ce:babe:10;
 deny 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -119,6 +118,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2600:3c07::f03c:94ff:fe12:513e;
 deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fbf6:11:27::3;
@@ -285,6 +285,7 @@ deny 2a00:1169:110:2990::;
 deny 2a00:1169:112:de0::;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
+deny 2a00:1169:11f:d680::;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:3f::c0cc:80;
@@ -374,7 +375,6 @@ deny 2a03:94e0:ffff:185:243:218:0:35;
 deny 2a03:94e0:ffff:185:243:218:0:41;
 deny 2a03:94e0:ffff:185:243:218:0:46;
 deny 2a03:94e0:ffff:185:243:218:0:89;
-deny 2a03:b0c0:2:d0::1768:8001;
 deny 2a03:b0c0:2:d0::f1b:2001;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
